<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".dialog.latihanempat.LatihanEmpatSatuActivity">

    <EditText
        android:id="@+id/input_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/nama_barang"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/masukkan_jumlah"
        android:inputType="number" />

    <EditText
        android:id="@+id/input_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/masukkan_harga"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hitung_custom"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_dfragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hitung_fragment"
            android:textAllCaps="false" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_struk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:translationZ="10dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/struk_belanja"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nama_barang"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_jumlah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jumlah"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/harga"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/total"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_kembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/kembalian"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>