<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".toastsnack.FirstActivity">

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        />

    <Button
        android:id="@+id/btn_snack_satu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_1"/>

    <Button
        android:id="@+id/btn_snack_dua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_2"/>

    <Button
        android:id="@+id/btn_snack_tiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_3"/>
</LinearLayout>