<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center_horizontal"
    tools:context=".dialog.latihantiga.LatihanTigaSatuActivity">

    <EditText
        android:id="@+id/input_x"
        android:hint="@string/masukkan_angka_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints="name"
        />

    <EditText
        android:id="@+id/input_y"
        android:hint="@string/masukkan_angka_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints="name"
        />

    <Button
        android:id="@+id/btn_standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latihan"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_aksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proses"
        android:textAllCaps="false"
        />
</LinearLayout>