<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".dialog.DialogActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <Button
        android:id="@+id/btn_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_standard"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_aksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_aksi"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/btn_aksi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_aksi"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_custom"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_dfragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_fragment"
        android:textAllCaps="false"
        />

</LinearLayout>