<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_belanja"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/input_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_uang"
        android:inputType="number"
        android:autofillHints="price"/>

    <Button
        android:id="@+id/btn_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bayar"
        android:textAllCaps="false" />

</LinearLayout>