<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toastsnack.latihandua.FirstDuaFragment"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/input_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama"
        android:inputType="text"
        android:autofillHints="name" />

    <Button
        android:id="@+id/btn_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/btn_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_page" />

</LinearLayout>