<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sharedpref.latihantujuh.LoginTujuhActivity"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:src="@drawable/img_binar2"
        android:contentDescription="@string/logo_binar" />

    <EditText
        android:id="@+id/input_uname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/masukkan_username"
        android:background="@drawable/style_edit_text"
        android:inputType="text"
        tools:ignore="RtlSymmetry"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_edit_text"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />
</LinearLayout>