<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/nama"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pt"
                    />

                <TextView
                    android:id="@+id/tv_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    />
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_baseline_star_24"/>

                <TextView
                    android:id="@+id/tv_ukuran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ukuran"
                    android:layout_marginStart="10dp"
                    />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_baseline_download_24"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/tv_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah"

                    />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</androidx.cardview.widget.CardView>